--- a/Alura/Python/Curso 5 - Collections Tuplas e Listas/Introducao_a_Collections.ipynb
+++ b/Alura/Python/Curso 5 - Collections Tuplas e Listas/Introducao_a_Collections.ipynb
@@ -6,7 +6,7 @@
       "name": "Introducao a Collections",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO4kjpubD2uMB38hKAT1w/0",
+      "authorship_tag": "ABX9TyM/067cCJkHEJi5guktOQgz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,13 +30,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ImumpcU82GzC",
-        "outputId": "c34d593c-aa5a-42f4-f9e9-f007b52f4440"
+        "outputId": "958ccf41-d754-42d8-fe7c-dc7791e76101"
       },
       "outputs": [
         {
@@ -64,7 +64,7 @@
       "metadata": {
         "id": "EqNrrcdw2wLK"
       },
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -86,9 +86,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rm60sjsQ3Hex",
-        "outputId": "64e13436-2f08-43b8-b99e-0c6c1cb73f89"
+        "outputId": "8525313d-8f56-4d2f-9943-41e73ab1c584"
       },
-      "execution_count": 6,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -98,7 +98,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 4
         }
       ]
     },
@@ -110,7 +110,7 @@
       "metadata": {
         "id": "4LUBLvl66cQX"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -121,7 +121,7 @@
       "metadata": {
         "id": "ALaDjK0I6Vz6"
       },
-      "execution_count": 9,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -131,6 +131,54 @@
       ],
       "metadata": {
         "id": "EetcvBrP62IH"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "28 in idade"
+      ],
+      "metadata": {
+        "id": "pwX5ob6566eA",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8f68ce92-b43c-49cd-d7e5-e1b0caf57080"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "idade = [39,30,27,18]"
+      ],
+      "metadata": {
+        "id": "glzEiDEA9dI6"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "idade.extend([1,2])"
+      ],
+      "metadata": {
+        "id": "U53NCES4-LDi"
       },
       "execution_count": 11,
       "outputs": []
@@ -144,8 +192,8 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "ZNoakAw065Si",
-        "outputId": "0410d1ee-271f-442d-8551-7c42f1b41f99"
+        "id": "mh4G03Ir-WD7",
+        "outputId": "b0fdb336-dd58-46d0-a3e4-37f50244b42a"
       },
       "execution_count": 12,
       "outputs": [
@@ -153,7 +201,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[]"
+              "[39, 30, 27, 18, 1, 2, 1, 2]"
             ]
           },
           "metadata": {},
@@ -164,10 +212,178 @@
     {
       "cell_type": "code",
       "source": [
+        "for idades in idade:\n",
+        "  print(idades + 1)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rgKAe8bi-k1m",
+        "outputId": "c9f68f07-2496-47ae-ae51-f284e3e994e6"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "40\n",
+            "31\n",
+            "28\n",
+            "19\n",
+            "2\n",
+            "3\n",
+            "2\n",
+            "3\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "idade_ano_que_vem = []\n",
+        "for idades in idade:\n",
+        "  idade_ano_que_vem.append(idades+1)\n",
+        "idade_ano_que_vem"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "c53W0fBo-nVP",
+        "outputId": "b1e9db8b-025e-4213-e8d9-0b99583eb33e"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[40, 31, 28, 19, 2, 3, 2, 3]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#List comprehension\n"
+      ],
+      "metadata": {
+        "id": "TDoXQhdnAd_l"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "idade_ano_que_vem = [(idades+1) for idades in idade]\n",
+        "idade_ano_que_vem"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bBujrsPl_i7I",
+        "outputId": "5070ac17-4ac3-4440-e407-ba779a834bd9"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[40, 31, 28, 19, 2, 3, 2, 3]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 25
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "[idades for idades in idade if idades > 21]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UNXg-JOG_xLU",
+        "outputId": "e055e8bc-c659-4b40-c282-bcb58c9b7072"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[39, 30, 27]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def faz_processamnto_de_visu(lista):\n",
+        "  print(len(lista))"
+      ],
+      "metadata": {
+        "id": "nT2xxTiRAmWr"
+      },
+      "execution_count": 28,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "faz_processamnto_de_visu(idade)\n",
+        "idade"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-N6Yy-4XAxLF",
+        "outputId": "727da1c9-cb4a-43bc-de1a-f36f67e2d806"
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "8\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[39, 30, 27, 18, 1, 2, 1, 2]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 31
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         ""
       ],
       "metadata": {
-        "id": "pwX5ob6566eA"
+        "id": "EOzA03kaA3X-"
       },
       "execution_count": null,
       "outputs": []
