--- a/Alura/Python/Curso 5 - Collections Tuplas e Listas/Introducao_a_Collections.ipynb
+++ b/Alura/Python/Curso 5 - Collections Tuplas e Listas/Introducao_a_Collections.ipynb
@@ -6,7 +6,7 @@
       "name": "Introducao a Collections",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM/067cCJkHEJi5guktOQgz",
+      "authorship_tag": "ABX9TyMRYMZU1Ed/6N7lpYMwAqFu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -380,13 +380,42 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "def faz_processamento_de_visualizacao(lista = None):\n",
+        "  if lista == None:\n",
+        "     lista = list()\n",
+        "  print(len(lista))\n",
+        "  print(lista)\n",
+        "  lista.append(13)"
       ],
       "metadata": {
         "id": "EOzA03kaA3X-"
       },
-      "execution_count": null,
+      "execution_count": 33,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "faz_processamento_de_visualizacao()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gzdPeeK3CrI4",
+        "outputId": "2a0282fa-f4d3-4233-d0b2-2dca5125285d"
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n",
+            "[]\n"
+          ]
+        }
+      ]
     }
   ]
 }
